--- a/_config.yml
+++ b/_config.yml
@@ -10,15 +10,14 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social media profiles
-# twitter: "https://twitter.com/project"
-# github: "https://github.com/user/project"
-# slack: "https://project.slack.com"
-# # stackoverflow: "https://stackoverflow.com/questions/tagged/project"
+twitter: "https://twitter.com/project"
+github: "https://github.com/user/project"
+slack: "https://project.slack.com"
+stackoverflow: "https://stackoverflow.com/questions/tagged/project"
 
 # Build settings
 markdown: kramdown
 # theme: Docyll
-
 sass:
   sass_dir: assets/css
   style: compressed
