--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,23 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social media profiles
-twitter: "https://twitter.com/project"
-github: "https://github.com/user/project"
-slack: "https://project.slack.com"
-stackoverflow: "https://stackoverflow.com/questions/tagged/project"
+socialProfiles:
+  - {
+      name: 'twitter',
+      link: 'https://twitter.com/project'
+    }
+  - {
+      name: 'github',
+      link: 'https://github.com/pykhaled/docyll-theme'
+    }
+  - {
+      name: 'slack',
+      link: 'https://project.slack.com'
+    }
+  - {
+      name: 'stackoverflow',
+      link: 'https://stackoverflow.com/questions/tagged/project'
+    }
 
 # Build settings
 markdown: kramdown
